--- a/test/pages/me/collection/collection.wxml
+++ b/test/pages/me/collection/collection.wxml
@@ -11,8 +11,8 @@
         </view>
         <view class="main-content">
             <view wx:for="{{psychoTest}}" class="content-box">
-                <image class="content-img" src="{{item.image_url}}"></image>
-                <view class="title">{{item.title}}</view>
+                <image class="content-img" src="{{item.Back_Image}}"></image>
+                <view class="title">{{item.Title}}</view>
             </view>
             <view wx:if="{{psychoTest.length == 0}}" class="empty">
                 <image class="empty-image" src="../../../images/empty_img.png"></image>
@@ -20,6 +20,7 @@
                 <view class="empty-link">去测评</view>
             </view>
         </view>
+        <view class="under-quote">-End-</view>
     </view>
     <view wx:if="{{location == 1}}" class="collection">
         <view class="nav-bar">
@@ -31,8 +32,8 @@
             <view wx:for="{{knowledge}}" class="content-box">
                 <image class="content-img" src="{{item.image_url}}"></image>
                 <view class="title">{{item.title}}</view>
-                <view class="author">{{item.author}}</view>
-                <view class="tag">{{item.tag}}</view>
+                <view class="author">{{item.Author}}</view>
+                <view class="tag">{{item.Tag}}</view>
             </view>
             <view wx:if="{{knowledge.length == 0}}" class="empty">
                 <image class="empty-image" src="../../../images/empty_img.png"></image>
@@ -40,6 +41,7 @@
                 <view class="empty-link">去干货知识区逛一逛</view>
             </view>
         </view>
+        <view class="under-quote">-End-</view>
     </view>
     <view wx:if="{{location == 2}}" class="collection">
         <view class="nav-bar">
@@ -64,6 +66,6 @@
                 <view class="empty-link">去社区逛一逛</view>
             </view>
         </view>
+        <view class="under-quote">-End-</view>
     </view>
-    <view class="under-quote">-End-</view>
 </view>
