--- a/test/pages/me/collection/collection.wxml
+++ b/test/pages/me/collection/collection.wxml
@@ -30,8 +30,8 @@
         </view>
         <view class="main-content">
             <view wx:for="{{knowledge}}" class="content-box">
-                <image class="content-img" src="{{item.image_url}}"></image>
-                <view class="title">{{item.title}}</view>
+                <image class="content-img" src="{{item.Back_Image}}"></image>
+                <view class="title">{{item.Title}}</view>
                 <view class="author">{{item.Author}}</view>
                 <view class="tag">{{item.Tag}}</view>
             </view>
