--- a/test/pages/home/main/main.wxml
+++ b/test/pages/home/main/main.wxml
@@ -15,7 +15,7 @@
       <view class="title">今日活动</view>
       <view class="subtitle">每天活动一下，保持健康心理！</view>
     </view>
-    <view class="sign" catchtap="signIn">签到</view>
+    <view class="sign" catchtap="showSignIn">签到</view>
   </view>
   <view class="actRoom">
     <view class="module game"></view>
@@ -32,4 +32,41 @@
     <view class="subtitle">每天测评一下，了解真实的自己！</view>
   </view>
   <view class="testRoom"></view>
+</view>
+
+
+<view class="cu-modal {{signFlag==true?'show':''}}" bindtap="hideSignIn">
+  <view class="cu-dialog" style="background:url({{back_img}})" catchtap>
+
+    <view class="titleRoom_sign">
+      <view class="signTitle">今日签到</view>
+      <view class="signTitle2">Hi，今天过得怎么样？</view>
+    </view>
+    <view class="iconList">
+      <!--menu-->
+      <view class="iconItem" wx:for="{{iconList}}" wx:key catchtap="selectMood" data-index="{{index}}">
+        <image class="iconImg" src="{{index==curIcon?item.img_selected:item.img}}"></image>
+        <view class="{{index==curIcon?'mood_select':'mood'}}">{{item.txt}}</view>
+      </view>
+    </view>
+    <view class="btnMask" hidden="{{curIcon!=-1}}">
+      <view class='signBtn' catchtap="signInClick">立即签到</view>
+    </view>
+    <view class='signBtn2' catchtap="signInClick" hidden="{{curIcon<0}}">立即签到</view>
+
+  </view>
+</view>
+
+<view class="cu-modal {{successFlag==true?'show':''}}" bindtap="hideSuccess">
+  <view class="cu-dialog" style="background:url({{back_img}})" catchtap>
+    <view class="successRoom">
+      <view class="title">签到成功</view>
+      <view class="success2">恭喜获得10积分！</view>
+      <view class="imgRoom margin-lg">
+      <image  class="iconImg" src="{{iconList[curIcon].img_selected}}"></image>
+      </view>
+        <view class="success3">希望以后的每一天都能像今天一样开心</view>
+    </view>
+
+  </view>
 </view>
