--- a/test/pages/community/main/main.wxss
+++ b/test/pages/community/main/main.wxss
@@ -1,56 +1,162 @@
 /* pages/community/community.wxss */
 .container{
-  font-family: "Gill Sans", sans-serif;
+  background-color: #f3f3f3;
 }
-text{
-  text-indent: 10rpx;
-  font-family: "Gill Sans", sans-serif;
-  font-size: 15pt;
-  vertical-align: center;
+.search-bar-container{
+  background-color:white;
+  width:100%;
+  height: 100rpx;
 }
 .search-bar{
-  background-color: #e1fbfb;
+  background-color: #f2f2f2;
   width:700rpx;
-  height: 100rpx;
+  height: 80%;
   margin:10rpx auto 0px auto;
-  border-radius: 16px;
+  border-radius: 32px;
   text-align: center;
   line-height: 100rpx;
 }
 .modules{
+  position: relative;
+  background-color: white;
   width:700rpx;
-  margin:auto;
+  height:250rpx;
+  border-radius: 16rpx;
+  margin-top:20rpx;
+}
+.modules-title{
+  font-size:36rpx;
+  color:#353535;
+  font-weight: bold;
+  position: absolute;
+  top:28rpx;
+  left:28rpx;
 }
 .modules-item{
   display: inline-block;
-  background-color:#e1fbfb;
-  width:150rpx;
-  height: 70rpx;
+  background-color:white;
+  width:160rpx;
+  height: 120rpx;
+  position: absolute;
+  top:100rpx;
   margin:20rpx 10rpx 20rpx 10rpx;
-  border-radius: 16px;
-  font-size: 7pt;
-  text-align: center;
-  line-height: 70rpx;
 }
-
-.single-card{
-  background-color: #e1fbfb;
-  width:700rpx;
-  height:300rpx;
-  margin-top: 20rpx;
-  margin-right: auto;
-  margin-left: auto;
-  border-radius: 16px;
-  line-height: 300rpx;
+.modules-img{
+  display: inline-block;
+  width: 160rpx;
+  height:120rpx;
+  border-radius: 32rpx;
+  box-shadow: 2 2 5 rgb(170,170,170,0.2);
+  position: absolute;
+  top:0rpx;
+}
+.modules-text{
+  font-size:26rpx;
   text-align: center;
+  color:#888888;
+}
+.cards-content{
+  position: relative;
+  width:710rpx;
+  margin-top:20rpx;
+}
+.card-box{
+  position: relative;
+  width:100%;
+  height:380rpx;
+  background-color: white;
+  border-radius: 32rpx;
+  margin-bottom: 20rpx;
+}
+.card-info{
+  width:100%;
+  height: 110rpx;
+  position: relative;
+  border-bottom: 2rpx dotted #e5e5e5;
+}
+.avartar{
+  width:60rpx;
+  height:60rpx;
+  border-radius: 50%;
+  position: absolute;
+  top:28rpx;
+  left:28rpx;
+}
+.username{
+  font-size:24rpx;
+  color: #888888;
+  position: absolute;
+  top:28rpx;
+  left:100rpx;
+}
+.date{
+  font-size:22rpx;
+  color:#b2b2b2;
+  position: absolute;
+  top:60rpx;
+  left:100rpx;
+}
+.card-content{
+  position: relative;
+}
+.content-img-container{
+  width:200rpx;
+  height:200rpx;
+  position: absolute;
+  top:20rpx;
+  left:20rpx;
+}
+.content-img{
+  width:200rpx;
+  height:200rpx;
+}
+.content-word{
+  font-size:26rpx;
+  color:#888888;
+  margin:auto;
+}
+.etc{
+  width:200rpx;
+  height:30rpx;
+  position: absolute;
+  bottom:20rpx;
+  left:20rpx;
+}
+.lightbulb{
+  width:30rpx;
+  height:30rpx;
+}
+.comment{
+  width:30rpx;
+  height:30rpx;
 }
 .post-article{
-  background-color: #5cddf6;
-  border-radius: 16px;
-  width:700rpx;
-  height: 100rpx;
-  text-align: center;
-  position: fixed;
-  bottom: 20rpx;
-  line-height: 100rpx;
+  width:50rpx;
+  height:50rpx;
+  border-radius: 50%;
+  position:fixed;
+  right:30rpx;
+  bottom:30rpx;
+  box-shadow: 2 2 2 rgb(170,170,170,0.2);
 }
+.post-pen{
+  width:70rpx;
+  height:70rpx;
+}
+#one{
+  position: absolute;
+  left:20rpx;
+}
+#two{
+  position: absolute;
+  left:200rpx;
+}
+#three{
+  position: absolute;
+  left:380rpx;
+}
+#four{
+  position: absolute;
+  left: 560rpx;
+}
+
