--- a/test/pages/community/activeDetail/activeDetail.wxss
+++ b/test/pages/community/activeDetail/activeDetail.wxss
@@ -1,1 +1,117 @@
-/* pages/test/test.wxss */
+/* pages/community/activeDetail.wxss */
+.container{
+    background-color: #f3fbfb;
+}
+.card-box{
+    position: relative;
+    width:100%;
+    background-color: white;
+    margin-bottom: 20rpx;
+  }
+.card-info{
+    width:100%;
+    height: 110rpx;
+    position: relative;
+    border-bottom: 2rpx dotted #e5e5e5;
+  }
+.avartar{
+    width:60rpx;
+    height:60rpx;
+    border-radius: 50%;
+    position: absolute;
+    top:28rpx;
+    left:28rpx;
+  }
+.username{
+    font-size:24rpx;
+    color: #888888;
+    position: absolute;
+    top:28rpx;
+    left:100rpx;
+  }
+.date{
+    font-size:22rpx;
+    color:#b2b2b2;
+    position: absolute;
+    top:60rpx;
+    left:100rpx;
+}
+.main-content{
+    font-size:28rpx;
+    color:#353535;
+    padding:30rpx;
+    line-height: 42rpx;
+}
+.etc{
+    position: relative;
+    width:720rpx;
+    height:80rpx;
+}
+.tag{
+    font-size: 24rpx;
+    color: #66cccc;
+    margin-left:30rpx;
+}
+.little-box{
+    width:180rpx;
+    height:80rpx;
+    display: inline-block;
+    color: #b2b2b2;
+    font-size:24rpx;
+    line-height: 120rpx;
+    align-items: center;
+}
+.little-img{
+    width:30rpx;
+    height:30rpx;
+}
+.comment{
+    position: relative;
+    width: 100%;
+    background-color: white;
+    margin-top:20rpx;
+}
+.comment-head{
+    position: relative;
+    width: 100%;
+    height:100rpx;
+    font-size: 24rpx;
+    color: #b2b2b2;
+    border-bottom: dotted 2rpx #e5e5e5;
+}
+.comment-title{
+    position: absolute;
+    top:30rpx;
+    left:30rpx;
+    display: inline-block;
+    font-size: 28rpx;
+    color: #353535;
+    border-bottom: #66cccc 5rpx solid;
+}
+.comment-box{
+    width:100%;
+    border-bottom: #e5e5e5 2rpx dotted;
+}
+.comment-info{
+    position: relative;
+    width:100%;
+    height: 110rpx;
+}
+.comment-content{
+    font-size:26rpx;
+    color:#353535;
+    position: relative;
+    left:100rpx;
+}
+.reply{
+    width:70%;
+    position: relative;
+    left:100rpx;
+    top:20rpx;
+    background-color: #f3fbfb;
+    font-size:24rpx;
+}
+.comment-etc{
+    width:100%;
+    height:50rpx;
+}
