--- a/test/pages/community/main/main.wxss
+++ b/test/pages/community/main/main.wxss
@@ -6,15 +6,19 @@
   background-color:white;
   width:100%;
   height: 100rpx;
+  position:fixed;
+  z-index:1
 }
 .search-bar{
-  background-color: #f2f2f2;
+  background-color:#f2f2f2;
   width:700rpx;
-  height: 80%;
-  margin:10rpx auto 0px auto;
+  height: 80rpx;
   border-radius: 32px;
   text-align: center;
-  line-height: 100rpx;
+  line-height: 80rpx;
+  position:fixed;
+  top:10rpx;
+  left:23rpx;
 }
 .modules{
   position: relative;
@@ -23,14 +27,21 @@
   height:250rpx;
   border-radius: 16rpx;
   margin-top:20rpx;
+  top:100rpx;
+  box-shadow: 5rpx 5rpx 5rpx rgb(170,170,170,0.2);
 }
 .modules-title{
   font-size:36rpx;
   color:#353535;
   font-weight: bold;
   position: absolute;
-  top:28rpx;
+  top:15rpx;
   left:28rpx;
+}
+.scroll-bar{
+  position: relative;
+  width:700rpx;
+  height: 250rpx;
 }
 .modules-item{
   display: inline-block;
@@ -38,7 +49,7 @@
   width:160rpx;
   height: 120rpx;
   position: absolute;
-  top:100rpx;
+  top:60rpx;
   margin:20rpx 10rpx 20rpx 10rpx;
 }
 .modules-img{
@@ -46,9 +57,6 @@
   width: 160rpx;
   height:120rpx;
   border-radius: 32rpx;
-  box-shadow: 2 2 5 rgb(170,170,170,0.2);
-  position: absolute;
-  top:0rpx;
 }
 .modules-text{
   font-size:26rpx;
@@ -59,6 +67,7 @@
   position: relative;
   width:710rpx;
   margin-top:20rpx;
+  top:100rpx;
 }
 .card-box{
   position: relative;
@@ -67,6 +76,7 @@
   background-color: white;
   border-radius: 32rpx;
   margin-bottom: 20rpx;
+  box-shadow: 5rpx 5rpx 5rpx rgb(170,170,170,0.2);
 }
 .card-info{
   width:100%;
@@ -96,31 +106,47 @@
   top:60rpx;
   left:100rpx;
 }
-.card-content{
+.main-content{
   position: relative;
+  width: 100%;
+  height: 240rpx;
 }
 .content-img-container{
-  width:200rpx;
-  height:200rpx;
-  position: absolute;
+  width:180rpx;
+  height:180rpx;
+  position: relative;
   top:20rpx;
   left:20rpx;
+  display: inline-block;
 }
 .content-img{
-  width:200rpx;
-  height:200rpx;
+  width:180rpx;
+  height:180rpx;
 }
 .content-word{
-  font-size:26rpx;
+  font-size:28rpx;
   color:#888888;
-  margin:auto;
+  display: inline-block;
+  width:450rpx;
+  position: absolute;
+  left:230rpx;
+  top:20rpx;
+}
+.content-word2{
+  font-size:28rpx;
+  color: #888888;
+  width:670rpx;
+  position: absolute;
+  left:30rpx;
+  top:20rpx;
 }
 .etc{
   width:200rpx;
   height:30rpx;
+  color:#b2b2b2;
   position: absolute;
-  bottom:20rpx;
-  left:20rpx;
+  top:330rpx;
+  left:30rpx;
 }
 .lightbulb{
   width:30rpx;
@@ -129,19 +155,21 @@
 .comment{
   width:30rpx;
   height:30rpx;
+  margin-left:20rpx;
 }
 .post-article{
-  width:50rpx;
-  height:50rpx;
+  width:120rpx;
+  height:120rpx;
   border-radius: 50%;
   position:fixed;
-  right:30rpx;
+  right:50rpx;
   bottom:30rpx;
   box-shadow: 2 2 2 rgb(170,170,170,0.2);
 }
 .post-pen{
-  width:70rpx;
-  height:70rpx;
+  width:120rpx;
+  height:120rpx;
+  border-radius: 50%;
 }
 #one{
   position: absolute;
