--- a/test/pages/community/subpage/subpage.wxml
+++ b/test/pages/community/subpage/subpage.wxml
@@ -4,7 +4,7 @@
 </cu-custom>
 <view class="container">
     <view class="head-image">
-        <image scr="{{head_image_url}}"></image>
+        <image class="head-img" src="{{head_image_url}}"></image>
     </view>
     <view class="nav-bar" wx:if="{{location==0}}">
         <view class="nav-light" bindtap="getNewest">最新</view>
@@ -15,13 +15,35 @@
         <view class="nav-light" bindtap="getHottest">最热</view>
     </view>
    <view class="cards-content">
-    <view class="card-box" wx:for="{{feed}}" wx:for-index="idx" wx:for-item="item">
+    <view class="card-box" wx:if="{{location==0}}" wx:for="{{newest}}" wx:for-index="idx" wx:for-item="item">
       <view class="card-info">
         <image class="avartar" src="{{item.avatar_url}}"></image>
         <view class="username">{{item.username}}</view>
         <view class="date">{{item.date}}</view>
       </view>
-      <view class="main-content" bindtap="getActiveDetail" wx:if="{{item.image_url !== ''}}">
+      <view class="main-content" wx:if="{{item.image_url !== ''}}">
+        <view class="content-img-container">
+          <image class="content-img" src="{{item.image_url}}"></image>
+        </view>
+        <view class="content-word">{{item.content}}</view>
+      </view>
+      <view class="main-content" wx:else>
+        <view class="content-word2">{{item.content}}</view>
+      </view>
+      <view class = "etc">
+          <image class="lightbulb" src="../../../images/ring_focus.png"></image>
+          <text>{{item.light_number}}</text>
+          <image class="comment" src="../../../images/ring_focus.png"></image>
+          <text>{{item.comment_number}}</text>
+      </view>
+    </view>
+    <view class="card-box" wx:if="{{location==1}}" wx:for="{{hottest}}" wx:for-index="idx" wx:for-item="item">
+      <view class="card-info">
+        <image class="avartar" src="{{item.avatar_url}}"></image>
+        <view class="username">{{item.username}}</view>
+        <view class="date">{{item.date}}</view>
+      </view>
+      <view class="main-content" wx:if="{{item.image_url !== ''}}">
         <view class="content-img-container">
           <image class="content-img" src="{{item.image_url}}"></image>
         </view>
