--- a/test/pages/community/subpage/subpage.wxss
+++ b/test/pages/community/subpage/subpage.wxss
@@ -3,6 +3,10 @@
   width:750rpx;
   height: 208rpx;
 }
+.head-img{
+  width:750rpx;
+  height: 208rpx;
+}
 .nav-bar{
   width:100%;
   height: 88rpx;
