--- a/test/pages/community/activeDetail/activeDetail.wxss
+++ b/test/pages/community/activeDetail/activeDetail.wxss
@@ -172,6 +172,10 @@
     width:100%;
     height:100rpx;
 }
+.blank2{
+    width:100%;
+    height:152rpx;
+}
 .numbers{
     font-size:20rpx;
     color: #b2b2b2;
