--- a/test/pages/discovery/main/main.wxss
+++ b/test/pages/discovery/main/main.wxss
@@ -76,6 +76,23 @@ line-height: 64rpx;
 font-size: 26rpx;
 background-color: transparent;
 }
-.myclass{
-  width:100%;
+
+.mytitle
+{
+  font-size:20px;
+  color:#353535;
+  margin-left:40rpx;
+}
+.mycard
+{
+  display: flex;
+  flex-direction: column;
+  width:320rpx;
+  height:200rpx;
+  background-color: white;
+}
+.card-list
+{
+  display: flex;
+  flex-wrap: wrap;
 }
