--- a/test/pages/home/chatRobot/chatRobot.wxss
+++ b/test/pages/home/chatRobot/chatRobot.wxss
@@ -1,10 +1,12 @@
 /* pages/chatRobot/chatRobot.wxss */
 
-/* pages/contact/contact.wxss */
+/* 页面背景色 */
 
 page {
   background-color: #f3fbfb;
 }
+
+/* 发送消息的容器 */
 
 .inputRoom {
   width: 100vw;
@@ -31,6 +33,8 @@ input {
   color: #444;
 }
 
+/* 左边消息 */
+
 .leftMsg {
   font-size: 26rpx;
   color: #444;
@@ -45,6 +49,8 @@ input {
   z-index: 10;
   box-shadow: 0rpx 2rpx 4rpx rgba(219, 219, 219, 0.35);
 }
+
+/* 右边消息 */
 
 .rightMsg {
   font-size: 26rpx;
@@ -61,6 +67,8 @@ input {
   box-shadow: 0rpx 2rpx 4rpx rgba(219, 219, 219, 0.35);
 }
 
+/* 发送按钮 */
+
 .mybtn {
   color: white;
   background-color: #6cc;
@@ -73,6 +81,8 @@ input {
   font-size: 26rpx;
   size: mini;
 }
+
+/* 非话语消息 */
 
 .disMsg {
   /* font-size: 26rpx; */
@@ -91,33 +101,43 @@ input {
   flex-direction: column;
 }
 
+/* 卡片标题 */
+
 .title {
   padding: 28rpx;
   border-bottom: solid 2rpx #e5e5e5;
   font-size: 28rpx;
 }
 
+/* 文章干货的下方容器 */
+
 .contentRoom {
   display: flex;
-  height:202rpx;
-  overflow:hidden;
+  height: 202rpx;
+  overflow: hidden;
   padding-top: 40rpx;
 }
+
+/* 文章干货的文章图片 */
 
 .articleImg {
   width: 240rpx;
   height: 120rpx;
-  margin-left:40rpx;
+  margin-left: 40rpx;
   margin-right: 20rpx;
 }
+
+/* 文章干货的文章标题 */
 
 .articleTitle {
   font-size: 28rpx;
   margin-right: 20rpx;
-  width:58%;
-  height:70%;
+  width: 58%;
+  height: 70%;
   overflow: hidden;
 }
+
+/* 卡片宽度 */
 
 .card-swiper {
   height: 220rpx !important;
@@ -132,17 +152,70 @@ input {
   overflow: initial;
 }
 
-.actRoom {
+/* .actRoom {
   padding: 0rpx 42%;
+} */
+
+/* 行为的框框高度 */
+
+.cu-tag {
+  height: 38rpx;
 }
-.cu-tag{
-  height:38rpx;
-}
+
+/* 行为消息 */
+
 .actMsg {
   font-size: 22rpx;
   color: white;
   background-color: gainsboro;
   /* padding: 0 35rpx;
   /* max-width: 165px;
-  min-width: 200rpx; */ 
+  min-width: 200rpx; */
 }
+
+.myheight {
+  height: 80rpx;
+}
+
+.robotMsg {
+  display: flex;
+  padding: 2vw 15vw 2vw 2vw;
+}
+
+.robotAction {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.robotMargin {
+  width: 4vw;
+  height: 11vw;
+  margin-left: 0.5vw;
+  display: flex;
+  align-items: center;
+  z-index: 9;
+}
+
+.discuss {
+  font-size: 24rpx;
+  overflow: hidden;
+  color: #888;
+  /* padding: 28rpx; */
+  height: 100%;
+  margin-right: 20rpx;
+}
+.left {
+  /* padding: 20rpx; */
+  height: 100%;
+  /* margin-right: 10rpx; */
+}
+.discussRoom {
+  display: flex;
+  height: 202rpx;
+  overflow: hidden;
+  padding-top: 28rpx;
+  padding-left:28rpx;
+  padding-bottom: 40rpx;
+}
+
